config/networking/networkpolicy-metric-collector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metric-collector-pprof-deny-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: telemetry-metric-gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
        - protocol: TCP
          port: 8888
