config/networking/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: operator-pprof-deny-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: operator
      app.kubernetes.io/instance: telemetry
      kyma-project.io/component: controller
      control-plane: telemetry-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 9443
        - protocol: TCP
          port: 9090
